--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 
 
 </head>
@@ -24,7 +24,7 @@
 
     <div class="container-fluid">
 
-        <div class="col-12">
+        <!-- <div class="col-12">
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -65,7 +65,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
         <!-- Navbar -->
         <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top" id="nav-main">
@@ -308,7 +308,7 @@
 
 
 
-        <div class="col-sm-12 col-md-8">
+        <!-- <div class="col-sm-12 col-md-8">
             <h6><b>Find Us</b></h6>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.2135041573024!2d18.055839615561407!3d59.346083816721794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6c1f42b387%3A0xdfa8086ea7907082!2sTulegatan%2041%2C%20113%2053%20Stockholm!5e0!3m2!1ssv!2sse!4v1575978745224!5m2!1ssv!2sse"
                 width="300" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -341,17 +341,17 @@
             </div>
         </div>
     </div>
-    </footer>
+    </footer> -->
 
 
-    <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
+        <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
 
-    <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="main.js"></script>
 
 
 </body>
