--- a/html/about.html
+++ b/html/about.html
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a href="html/about.html" class="nav-link active">
                         ABOUT
                         </a>
                     </li>
@@ -73,6 +73,19 @@
 
     <!-- Page Content -->
     <div class="container">
+
+        <div class="row"> 
+            <div class="col-md-4"> 
+
+                <p> Vårt företag startades... </p>
+
+
+            </div>
+
+        </div>
+
+
+
 
     
 
