--- a/html/about.html
+++ b/html/about.html
@@ -77,7 +77,7 @@
         <div class="row"> 
             <div class="col-md-4"> 
 
-                <p> Vårt företag startades... </p>
+                <p> TEST </p>
 
 
             </div>
@@ -92,8 +92,7 @@
         
 
 
-    <p> TEST :D </p>
-
+    
 
 
        </div>
