--- a/html/cart.html
+++ b/html/cart.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a href="..html/about.html" class="nav-link active">
                             ABOUT
                         </a>
                     </li>
