--- a/main.html
+++ b/main.html
@@ -212,7 +212,7 @@
     </div>
     <!-- /.container -->
 
-    <!-- /footerr -->
+    <!-- /footer -->
     <footer id="footer" class="site-footer">
         <div class="container">
             <div class="row">
