--- a/html/about.html
+++ b/html/about.html
@@ -71,7 +71,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
           <div class="col mt-4">
             <h4 class="text-center">About us</h4>
@@ -94,11 +94,11 @@ email to: <b>sales@Retech.com.</b> We will get back to you within 1-2 days.
 
         <div class="row"> 
             <div class="col mt-4">
-                <img src="../img/about.jpg" class="rounded mx-auto d-block" alt="#" width="400" height="300"> 
+                <img src="../img/about2.jpg" class="rounded mx-auto d-block border border-secondary" alt="#" width="400" height="300"> 
         </div>
 
         <div class="col mt-4">
-            <img src="../img/.jpg" class="rounded mx-auto d-block" alt="#" width="400" height="300">
+            <img src="../img/about.jpg" class="rounded mx-auto d-block" alt="#" width="400" height="300">
             
           </div>
 
@@ -129,7 +129,7 @@ email to: <b>sales@Retech.com.</b> We will get back to you within 1-2 days.
 
     <!-- /footer -->
     <footer id="footer" class="site-footer">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
 
                 <div class="col-sm-12 col-md-8">
