--- a/html/about.html
+++ b/html/about.html
@@ -143,7 +143,7 @@ email to: <b>sales@Retech.com.</b> We will get back to you within 1-2 days.
                     <ul class="footer-contact">
                         <li>Phone: <b>010-534 28 90</b></li>
                         <li>E-Mail: <b>info@Retech.se</b></li>
-                        <li>Address: <b>Tulegatan 41113 53 Stockholm</b></li>
+                        <li>Address: <b>Tulegatan 41 113 53 Stockholm</b></li>
                         <li>Opening Hours: <b>Everyday 08 - 17:00</b></li>
                     </ul>
                 </div>
