--- a/html/cart.html
+++ b/html/cart.html
@@ -65,7 +65,7 @@
     </nav>
 
     <!-- cart -->
-    <div class="checkout">
+    <div class="checkout p-3">
         <div class="col-lg-4 col-md-6">
             <div class="row">
                 <div class="emptyProducts">
@@ -170,11 +170,16 @@
                         </div>
                     </div>
 
+
                     <div class="row">
                         <div class="col-lg-8 col-md-8">
-                            <input type="submit" value="Place your order" class="btn">
+                            <a href="thankyou.html">
+                                <button class="btn btn-outline my-4" type=button id="btnThankYou">Place your order</button> </a>
                         </div>
                     </div>
+
+
+
 
                     <label>
                     <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as PayPal
