--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -72,7 +72,7 @@
         <div class="row justify-content-center">
             <div class="thk col-lg-8 text-center mt-2">
                 <div>
-                    <i class=" display-2 fas fa-check-circle text-bg-success text-success font-weight-bold mb-2"></i>
+                    <i class=" fas fa-check-circle display-2 text-bg-success text-success font-weight-bold m-3"></i>
                 </div>
                 <h2 class="mb-3 text-white">Thank you for purchasing from Retech <br/> <small>   and caring for environment..</small> </h2>
                 <p>
