--- a/html/products.html
+++ b/html/products.html
@@ -42,12 +42,18 @@
                         PRODUCTS
                         </a>
                         <div class="dropdown-menu bg-dark">
-                            <a sss class="dropdown-item text-light" href="#">Computers</a>
-                            <a class="dropdown-item text-light" href="#">Phones</a>
-                            <a class="dropdown-item text-light" href="#">TVs</a>
-                            <a class="dropdown-item text-light" href="#">Cameras</a>
-                            <a class="dropdown-item text-light" href="#">Other Techs</a>
-                            <a class="dropdown-item text-light bg-warning" href="#">Latest Products</a>
+                            <!--<a class="dropdown-item text-light" href="#">Computers</a>-->
+                            <button type="button" class=" col-12 categButton">Computers</button>
+                            <button type="button" class=" col-12 categButton">Phones</button>
+                           <!-- <a class="dropdown-item text-light" href="#" id="PhoneLink">Phones</a> -->
+                           <button type="button" class="categButton col-12">TV</button>
+                           <!--<a class="dropdown-item text-light" href="#">TVs</a>-->
+                           <button type="button" class="categButton col-12">Camera</button>
+                            <!--<a class="dropdown-item text-light" href="#">Cameras</a>-->
+                            <button type="button" class="categButton col-12">Accessories</button>
+                            <!--<a class="dropdown-item text-light" href="#">Other Techs</a>-->
+                            <button type="button" class="categButton col-12">Latest Products</button>
+                           <!--<a class="dropdown-item text-light bg-warning" href="#">Latest Products</a>-->
                         </div>
                     </li>
 
