thank you page styling

--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -70,7 +70,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="thk col-lg-8 text-center mt-2">
+            <div class="thk col-lg-6 text-center mt-2 border border-success rounded-top ">
                 <div>
                     <i class=" fas fa-check-circle display-2 text-bg-success text-success font-weight-bold m-3"></i>
                 </div>
