--- a/main.html
+++ b/main.html
@@ -78,12 +78,18 @@
                         <div class="my-carousel">
                             <img src="img/bild1.jpg" class="w-50" alt="...">
                             <img src="img/bild2.jpg" class="w-50" alt="...">
+                            <div class="salebox">
+                                <div class="sale">%25 <br/> Christmas <br/>Sale</div>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="my-carousel">
                             <img src="img/bild3.jpg" class="w-50" alt="...">
                             <img src="img/bild4.jpg" class="w-50" alt="...">
+                            <div class="salebox">
+                                <div class="sale">%25 <br/> Christmas <br/>Sale</div>
+                            </div>
                         </div>
                     </div>
                 </div>
