--- a/main.html
+++ b/main.html
@@ -75,22 +75,26 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <a href="html/products.html"></a>
                         <div class="my-carousel">
-                            <img src="img/bild1.jpg" class="w-50" alt="...">
-                            <img src="img/bild2.jpg" class="w-50" alt="...">
+                            <img src="img/carousel_1.png" class="w-50" alt="...">
+                            <img src="img/carousel_2.jpg" class="w-50" alt="...">
                             <div class="salebox">
                                 <div class="sale">%25 <br/> Christmas <br/>Sale</div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="carousel-item">
-                        <div class="my-carousel">
-                            <img src="img/bild3.jpg" class="w-50" alt="...">
-                            <img src="img/bild4.jpg" class="w-50" alt="...">
-                            <div class="salebox">
-                                <div class="sale">%25 <br/> Christmas <br/>Sale</div>
+                        <a href="html/products.html">
+                            <div class="my-carousel">
+                                <img src="img/carousel_3.png" class="w-50" alt="...">
+                                <img src="img/carousel_4.png" class="w-50" alt="...">
+                                <div class="salebox">
+                                    <div class="sale">%25 <br/> Christmas <br/>Sale</div>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
