--- a/html/about.html
+++ b/html/about.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="row">
           <div class="col mt-4">
-            <h4 class="text-center">About us</h4>
+            <h4 class="text-center bg-dark text-warning">About us</h4>
                <p class="mt-4"> 
                 ReTech was founded in 2018 by four students who wanted to sell used technology further
                 to the consumers. Our vision is to make the buying and selling of technical products more simple, fast and safe.
@@ -82,7 +82,7 @@
                 up to your expectations. That is exactly what we on ReTech wanted to change and at the same time contribute to an improved environment, so we did!</p> 
           </div>
           <div class="col mt-4">
-            <h4 class="text-center">Sell with us</h4>
+            <h4 class="text-center bg-dark text-warning">Sell with us</h4>
              <p class="mt-4">If you are interested to sell your products to us you can send it in and we will
                 examine it. Every product that we receive will go through some tests by our expertes.
                 If something is wrong we will fix the problem and then put it up on our website for sale.
