--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="html/cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning">3 </span>
+                        <a href="html/cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning"> </span>
                         </a>
                     </li>
                 </ul>
