Why retech text

--- a/main.html
+++ b/main.html
@@ -121,9 +121,11 @@
                 <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
             </div>
             <div class="col-lg-5">
-                <h1 class="font-weight-light">WHY RETECH?</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sed aliquid dolorem possimus unde eaque quas eius. Quibusdam ut, enim optio eaque sit, similique dolor repellendus corporis harum vero, cum commodi. Dolor sunt laboriosam
-                    ullam maiores quaerat, sit similique dolorem atque vitae eveniet blanditiis. Consequuntur aut rerum sunt, iure, inventore temporibus omnis soluta distinctio. Cumque officia, impedit suscipit aperiam autem.</p>
+                <h3 class="font-weight-light">WHY RETECH?</h3>
+                <p>Electronic waste is the fastest-growing waste stream in the world. In the EU alone, some 10 million tonnes are tossed out each year. The average EU citizen's electronic product purchases currently equate to 24 kg of e-scrap per year. If
+                    we don't take measures, our world will turn into a e-dump. There are many proactive steps. None are more overt than reusing materials and reducing waste. Retech exists to help making the Earth a bit better place to live. So to save
+                    our natural resources, protect the environment and save money buy from Retech !!!
+                </p>
             </div>
         </div>
 
