--- a/main.html
+++ b/main.html
@@ -123,8 +123,8 @@
             <div class="col-lg-5">
                 <h3 class="font-weight-light">WHY RETECH?</h3>
                 <p>Electronic waste is the fastest-growing waste stream in the world. In the EU alone, some 10 million tonnes are tossed out each year. The average EU citizen's electronic product purchases currently equate to 24 kg of e-scrap per year. If
-                    we don't take measures, our world will turn into an e-dump. There are many proactive steps. None are more overt than reusing materials and reducing waste. Retech exists to help making the Earth a bit better place to live. So to save
-                    our natural resources, protect the environment and save money buy from Retech !!!
+                    we don't take measures, our world will turn into an e-dump. <br/>There are many proactive steps. None are more overt than reusing materials and reducing waste. Retech exists to help making the Earth a bit better place to live. So to
+                    save our natural resources, protect the environment and save money buy from Retech !!!
                 </p>
             </div>
         </div>
