--- a/html/cart.html
+++ b/html/cart.html
@@ -83,8 +83,8 @@
                 <div class="col-lg-4 col-md-6 pt-4">
                     <h4>Cart
                         <span class="price" style="color:black">
-                        <i class="fa fa-shopping-cart"></i>
-                        <b>4</b>
+                        <!-- <i class="fa fa-shopping-cart"></i>
+                        <b>4</b> -->
                     </span>
                     </h4>
                     <ul id="productResult">
@@ -165,7 +165,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <label class="btn">
-                            <input type="radio" name="options" id="option3" autocomplete="off"> Kontant
+                            <input type="radio" name="options" id="option3" autocomplete="off"> Faktura
                         </label>
                         </div>
                     </div>
