updatet main and productsside.

--- a/html/products.html
+++ b/html/products.html
@@ -52,7 +52,7 @@
                             <!--<a class="dropdown-item text-light" href="#">Cameras</a>-->
                             <button type="button" class="categButton col-12">Accessories</button>
                             <!--<a class="dropdown-item text-light" href="#">Other Techs</a>-->
-                            <button type="button" class="categButton col-12">Latest Products</button>
+                            <button type="button" class="col-12" id="latest">Latest Products</button>
                            <!--<a class="dropdown-item text-light bg-warning" href="#">Latest Products</a>-->
                         </div>
                     </li>
