--- a/html/about.html
+++ b/html/about.html
@@ -56,7 +56,7 @@
                     </a>
                     </li>
                     <li class="nav-item">
-                        <a href="cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning"> </span>
+                        <a href="cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning" id="badge"> </span>
                         </a>
                     </li>
                 </ul>
