--- a/html/cart.html
+++ b/html/cart.html
@@ -165,7 +165,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <label class="btn">
-                            <input type="radio" name="options" id="option3" autocomplete="off"> Kontant
+                            <input type="radio" name="options" id="option3" autocomplete="off"> Faktura
                         </label>
                         </div>
                     </div>
