--- a/html/main.html
+++ b/html/main.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 
 </head>
@@ -25,7 +25,7 @@
     <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top" id="nav-main">
         <div class="container">
             <a href="main.html" class="navbar-brand">
-                <img src="img/retech_logo_2.png" alt="ReTech logo">
+                <img src="../img/retech_logo_2.png" alt="ReTech logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -34,18 +34,18 @@
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active"><i class="fa fa-fw fa-home"></i>
+                        <a href="main.html" class="nav-link active"><i class="fa fa-fw fa-home"></i>
                         </a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="html/products.html" class="nav-link active">
+                        <a href="products.html" class="nav-link active">
                             PRODUCTS
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="html/about.html" class="nav-link active">
+                        <a href="about.html" class="nav-link active">
                             ABOUT
                         </a>
                     </li>
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="html/cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning" id="badge"> </span>
+                        <a href="cart.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning" id="badge"> </span>
                         </a>
                     </li>
                 </ul>
@@ -77,8 +77,8 @@
                     <div class="carousel-item active">
                         <a href="html/products.html"></a>
                         <div class="my-carousel">
-                            <img src="img/carousel_1.png" class="w-50" alt="...">
-                            <img src="img/carousel_2.jpg" class="w-50" alt="...">
+                            <img src="../img/carousel_1.png" class="w-50" alt="...">
+                            <img src="../img/carousel_2.jpg" class="w-50" alt="...">
                             <div class="salebox">
                                 <div class="sale">%25 <br/> Christmas <br/>Sale</div>
                             </div>
@@ -88,8 +88,8 @@
                     <div class="carousel-item">
                         <a href="html/products.html">
                             <div class="my-carousel">
-                                <img src="img/carousel_3.png" class="w-50" alt="...">
-                                <img src="img/carousel_4.png" class="w-50" alt="...">
+                                <img src="../img/carousel_3.png" class="w-50" alt="...">
+                                <img src="../img/carousel_4.png" class="w-50" alt="...">
                                 <div class="salebox">
                                     <div class="sale">%25 <br/> Christmas <br/>Sale</div>
                                 </div>
@@ -118,7 +118,7 @@
         <!-- Why Retech -->
         <div class="row align-items-center my-5">
             <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="../img/foto_44.jpg" alt="why retech">
             </div>
             <div class="col-lg-5">
                 <h3 class="font-weight-light">WHY RETECH?</h3>
@@ -215,7 +215,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
 
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
 
 
 </body>
