--- a/html/products.html
+++ b/html/products.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top" id="nav-main">
         <div class="container">
-            <a href="../main.html" class="navbar-brand">
+            <a href="../html/main.html" class="navbar-brand">
                 <img src="../img/retech_logo_2.png" alt="ReTech Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
@@ -33,7 +33,7 @@
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="../main.html" class="nav-link active"><i class="fa fa-fw fa-home"></i>
+                        <a href="../html/main.html" class="nav-link active"><i class="fa fa-fw fa-home"></i>
                          </a>
                     </li>
 
